--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Molfa — صورة → شبكة تطريز + DST</title>
+<title>Molfa — شبكة تطريز صحيحة</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
 body{font-family:Inter,system-ui,Arial; background:#f3f4f6; color:#111;}
@@ -15,8 +15,8 @@ button{cursor:pointer;}
 </head>
 <body class="min-h-screen flex flex-col">
 <header class="bg-indigo-700 text-white py-4 shadow text-center">
-<h1 class="text-xl font-semibold">Molfa — صورة → شبكة تطريز (DST مباشر)</h1>
-<p>توليد شبكة أبيض/أسود + غرز X + تصدير ملف DST مباشرة في المتصفح</p>
+<h1 class="text-xl font-semibold">Molfa — شبكة تطريز صحيحة (DST)</h1>
+<p>كل خانة سوداء → غرزة X منفصلة + تصدير DST حقيقي</p>
 </header>
 
 <main class="container mx-auto p-4 md:p-6 flex-grow">
@@ -47,7 +47,7 @@ button{cursor:pointer;}
 </div>
 
 <div class="mt-4 flex gap-2">
-<button id="process" class="flex-1 bg-indigo-600 text-white py-2 rounded">🔧 توليد + تصدير DST</button>
+<button id="process" class="flex-1 bg-indigo-600 text-white py-2 rounded">🔧 توليد + DST صحيح</button>
 </div>
 
 <div id="downloadBtns" class="mt-3 grid grid-cols-1 gap-2"></div>
@@ -79,13 +79,13 @@ function forceDownload(blob,name){
   setTimeout(()=>URL.revokeObjectURL(url),2000); 
 }
 
-// DST helper functions (minimal, enough لتصدير النقاط X)
+// توليد DST لكل X بشكل منفصل
 function buildDST(coords){
-  const header = new Uint8Array(512); // فارغ
+  const header = new Uint8Array(512); 
   const body = [];
   let prevx=0, prevy=0;
   coords.forEach(p=>{
-    const x=Math.round(p[0]), y=Math.round(p[1]);
+    const x=p[0], y=p[1];
     let dx=x-prevx, dy=y-prevy;
     while(Math.abs(dx)>121||Math.abs(dy)>121){
       const sx=Math.max(-121,Math.min(121,dx));
@@ -148,14 +148,15 @@ const worker = makeWorkerFromFunc(function(){
           if(!cells[gy][gx].black) continue;
           const x0=gx*cell,y0=gy*cell;
           const x1=x0+cell,y1=y0+cell;
+
+          // غرزة X منفصلة
           const L=Math.hypot(x1-x0,y1-y0);
           const n=Math.max(1,Math.ceil(L/step));
           for(let i=0;i<=n;i++){
             const t=i/n;
             stitchPoints.push([x0+(x1-x0)*t,y0+(y1-y0)*t]);
           }
-          const L2=Math.hypot(x0-x1,y1-y0);
-          const n2=Math.max(1,Math.ceil(L2/step));
+          const n2=Math.max(1,Math.ceil(L/step));
           for(let i=0;i<=n2;i++){
             const t=i/n2;
             stitchPoints.push([x1+(x0-x1)*t,y0+(y1-y0)*t]);
@@ -163,20 +164,9 @@ const worker = makeWorkerFromFunc(function(){
         }
       }
 
-      if(stitchPoints.length<2) stitchPoints.push([0,0],[10,10]);
-
-      const merged=[];
-      for(const p of stitchPoints){
-        if(merged.length===0) merged.push(p);
-        else{
-          const last=merged[merged.length-1];
-          if(Math.hypot(last[0]-p[0],last[1]-p[1])>=0.8) merged.push(p);
-        }
-      }
-
       const scale=Number(exportScale)||0.2;
-      const dstCoords=merged.map(p=>[Math.round(p[0]*scale),Math.round(p[1]*scale)]);
-      postMessage({dstCoords, merged, w, h});
+      const dstCoords=stitchPoints.map(p=>[Math.round(p[0]*scale),Math.round(p[1]*scale)]);
+      postMessage({dstCoords, stitchPoints, w, h});
     }catch(err){ postMessage({error:err.message||String(err)}); }
   };
 });
@@ -198,14 +188,16 @@ worker.onmessage=ev=>{
   let svg=`<svg xmlns='http://www.w3.org/2000/svg' width='${ev.data.w}' height='${ev.data.h}' viewBox='0 0 ${ev.data.w} ${ev.data.h}'>`;
   svg+=`<rect width='100%' height='100%' fill='white'></rect>`;
   svg+=`<g stroke='black' stroke-width='1' stroke-linecap='round'>`;
-  svg+=`<polyline fill='none' points='${ev.data.merged.map(p=>p[0]+','+p[1]).join(' ')}'/>`;
+  ev.data.stitchPoints.forEach(p=>{
+    svg+=`<circle cx='${p[0]}' cy='${p[1]}' r='0.5' fill='black'></circle>`;
+  });
   svg+=`</g></svg>`;
   preview.innerHTML=`<object type="image/svg+xml" data="data:image/svg+xml;base64,${btoa(svg)}" style="width:100%;height:100%"></object>`;
 
   dlContainer.innerHTML='';
   const btnDST=document.createElement('button');
   btnDST.className='bg-green-600 text-white py-2 rounded';
-  btnDST.textContent='⬇️ DST';
+  btnDST.textContent='⬇️ DST صحيح';
   btnDST.onclick=()=>forceDownload(new Blob([buildDST(ev.data.dstCoords)],{type:'application/octet-stream'}),'molfa_output.dst');
   dlContainer.appendChild(btnDST);
 };
