--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Molfa — صورة → شبكة تطريز + DST</title>
+<title>Molfa — صورة → DST كامل</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
 body{font-family:Inter,system-ui,Arial; background:#f3f4f6; color:#111;}
 .mono{font-family:ui-monospace,monospace;}
 .svg-wrap{width:100%;height:100%;display:flex;align-items:center;justify-content:center;}
-.svg-wrap svg,.svg-wrap object{width:100%;height:100%;}
 button{cursor:pointer;}
 </style>
 </head>
 <body class="min-h-screen flex flex-col">
 <header class="bg-indigo-700 text-white py-4 shadow text-center">
-<h1 class="text-xl font-semibold">Molfa — صورة → شبكة تطريز (DST مباشر)</h1>
-<p>توليد شبكة أبيض/أسود + غرز X + تصدير ملف DST حقيقي في المتصفح</p>
+<h1 class="text-xl font-semibold">Molfa — صورة → DST كامل</h1>
+<p>رفع صورة → تحويلها لمخطط → إنشاء ملف DST → حفظ التصميم → تنزيل</p>
 </header>
 
 <main class="container mx-auto p-4 md:p-6 flex-grow">
@@ -46,11 +45,12 @@ button{cursor:pointer;}
 <input id="exportScale" type="number" value="0.2" step="0.05" min="0.05" max="5" class="w-full p-2 border rounded"/>
 </div>
 
-<div class="mt-4 flex gap-2">
-<button id="process" class="flex-1 bg-indigo-600 text-white py-2 rounded">🔧 توليد + تصدير DST</button>
+<div class="mt-4 flex flex-col gap-2">
+<button id="process" class="bg-indigo-600 text-white py-2 rounded">🔧 توليد المخطط</button>
+<button id="createDST" class="bg-purple-600 text-white py-2 rounded" disabled>📄 إنشاء ملف DST</button>
+<button id="saveDST" class="bg-yellow-600 text-white py-2 rounded" disabled>💾 حفظ التصميم في الملف</button>
+<button id="downloadDST" class="bg-green-600 text-white py-2 rounded" disabled>⬇️ تنزيل الملف النهائي</button>
 </div>
-
-<div id="downloadBtns" class="mt-3 grid grid-cols-1 gap-2"></div>
 </div>
 
 <div class="md:col-span-2">
@@ -79,52 +79,37 @@ function forceDownload(blob,name){
   setTimeout(()=>URL.revokeObjectURL(url),2000); 
 }
 
-// DST helper functions (محسّنة لتوليد ملف DST حقيقي)
 function buildDST(coords){
-  const header = new Uint8Array(512); // هيدر DST فارغ
-  const body = [];
-  let prevx = 0, prevy = 0;
-
-  coords.forEach(p => {
-    let x = Math.round(p[0]);
-    let y = Math.round(p[1]);
-    let dx = x - prevx;
-    let dy = y - prevy;
-
-    // تقسيم القفزات الطويلة حسب مواصفات DST
-    while(Math.abs(dx) > 121 || Math.abs(dy) > 121){
-      const sx = Math.max(-121, Math.min(121, dx));
-      const sy = Math.max(-121, Math.min(121, dy));
-      body.push(sx & 0xFF, sy & 0xFF, 0x01); // JUMP stitch
-      dx -= sx;
-      dy -= sy;
-      prevx += sx;
-      prevy += sy;
+  const header = new Uint8Array(512);
+  const body=[];
+  let prevx=0, prevy=0;
+  coords.forEach(p=>{
+    let x=Math.round(p[0]), y=Math.round(p[1]);
+    let dx=x-prevx, dy=y-prevy;
+    while(Math.abs(dx)>121 || Math.abs(dy)>121){
+      const sx=Math.max(-121,Math.min(121,dx));
+      const sy=Math.max(-121,Math.min(121,dy));
+      body.push(sx&0xFF, sy&0xFF, 0x01);
+      dx-=sx; dy-=sy; prevx+=sx; prevy+=sy;
     }
-
-    // STITCH عادي
-    body.push(dx & 0xFF, dy & 0xFF, 0x03);
-    prevx = x;
-    prevy = y;
+    body.push(dx&0xFF, dy&0xFF, 0x03);
+    prevx=x; prevy=y;
   });
-
-  // إضافة النهاية
-  body.push(0x00, 0x00, 0xF3);
-
-  const arr = new Uint8Array(512 + body.length);
-  arr.set(header, 0);
-  arr.set(new Uint8Array(body), 512);
+  body.push(0x00,0x00,0xF3);
+  const arr=new Uint8Array(512+body.length);
+  arr.set(header,0);
+  arr.set(new Uint8Array(body),512);
   return arr;
 }
 
-// Worker لمعالجة الصورة
 function makeWorkerFromFunc(fn){ 
   const src = fn.toString(); 
   const blob=new Blob(['('+src+')()'],{type:'application/javascript'}); 
   return new Worker(URL.createObjectURL(blob)); 
 }
 
-const worker = makeWorkerFromFunc(function(){
+// Worker لتحويل الصورة لمخطط غرز
+const worker=makeWorkerFromFunc(function(){
   onmessage=async ev=>{
     const {dataURL, cellSize, bwThreshold, stitchStep, exportScale}=ev.data;
     try{
@@ -151,95 +136,90 @@ const worker = makeWorkerFromFunc(function(){
             }
           }
           const lum=Math.round(0.299*(sr/cnt)+0.587*(sg/cnt)+0.114*(sb/cnt));
-          row.push({black: lum<=(bwThreshold|0)?1:0});
+          row.push({black: lum<=bwThreshold?1:0});
         }
         cells.push(row);
       }
 
-      const step=Math.max(1,Math.min(16,Number(stitchStep)||4));
       const stitchPoints=[];
       for(let gy=0;gy<gridH;gy++){
         for(let gx=0;gx<gridW;gx++){
           if(!cells[gy][gx].black) continue;
           const x0=gx*cell,y0=gy*cell;
           const x1=x0+cell,y1=y0+cell;
-          const L=Math.hypot(x1-x0,y1-y0);
-          const n=Math.max(1,Math.ceil(L/step));
-          for(let i=0;i<=n;i++){
-            const t=i/n;
-            stitchPoints.push([x0+(x1-x0)*t,y0+(y1-y0)*t]);
-          }
-          const L2=Math.hypot(x0-x1,y1-y0);
-          const n2=Math.max(1,Math.ceil(L2/step));
-          for(let i=0;i<=n2;i++){
-            const t=i/n2;
-            stitchPoints.push([x1+(x0-x1)*t,y0+(y1-y0)*t]);
-          }
+          stitchPoints.push([x0,y0],[x1,y1],[x0,y1],[x1,y0]);
         }
       }
 
       if(stitchPoints.length<2) stitchPoints.push([0,0],[10,10]);
-
-      const merged=[];
-      for(const p of stitchPoints){
-        if(merged.length===0) merged.push(p);
-        else{
-          const last=merged[merged.length-1];
-          if(Math.hypot(last[0]-p[0],last[1]-p[1])>=0.8) merged.push(p);
-        }
-      }
-
       const scale=Number(exportScale)||0.2;
-      const dstCoords=merged.map(p=>[p[0]*scale,p[1]*scale]);
-      postMessage({dstCoords, merged, w, h});
+      const dstCoords=stitchPoints.map(p=>[p[0]*scale,p[1]*scale]);
+      postMessage({dstCoords, merged:dstCoords, w, h});
     }catch(err){ postMessage({error:err.message||String(err)}); }
   };
 });
 
 const fileInput=document.getElementById('file');
 const btn=document.getElementById('process');
+const createBtn=document.getElementById('createDST');
+const saveBtn=document.getElementById('saveDST');
+const downloadBtn=document.getElementById('downloadDST');
 const preview=document.getElementById('svgPreview');
-const dlContainer=document.getElementById('downloadBtns');
-const cellSizeInput=document.getElementById('cellSize');
-const bwThresholdInput=document.getElementById('bwThreshold');
-const stitchStepInput=document.getElementById('stitchStep');
-const exportScaleInput=document.getElementById('exportScale');
 
-let merged=[];
+let merged=[], dstFile=null;
 
-worker.onmessage=ev=>{
-  if(ev.data.error){ log('خطأ: '+ev.data.error); return; }
-  log('تمت المعالجة — نقاط: '+ev.data.dstCoords.length);
-  merged = ev.data.merged;
-
-  // SVG preview
-  let svg=`<svg xmlns='http://www.w3.org/2000/svg' width='${ev.data.w}' height='${ev.data.h}' viewBox='0 0 ${ev.data.w} ${ev.data.h}'>`;
-  svg+=`<rect width='100%' height='100%' fill='white'></rect>`;
-  svg+=`<g stroke='black' stroke-width='1' stroke-linecap='round'>`;
-  svg+=`<polyline fill='none' points='${merged.map(p=>p[0]+','+p[1]).join(' ')}'/>`;
-  svg+=`</g></svg>`;
-  preview.innerHTML=`<object type="image/svg+xml" data="data:image/svg+xml;base64,${btoa(svg)}" style="width:100%;height:100%"></object>`;
-
-  dlContainer.innerHTML='';
-  const btnDST=document.createElement('button');
-  btnDST.className='bg-green-600 text-white py-2 rounded';
-  btnDST.textContent='⬇️ DST حقيقي';
-  btnDST.onclick=()=>forceDownload(new Blob([buildDST(merged)],{type:'application/octet-stream'}),'molfa_output.dst');
-  dlContainer.appendChild(btnDST);
-};
-
+// معالجة الصورة وتحويلها لمخطط غرز
 btn.addEventListener('click',()=>{
   const f=fileInput.files[0];
   if(!f){ alert('اختر صورة'); return; }
   const reader=new FileReader();
   reader.onload=()=>worker.postMessage({
     dataURL:reader.result,
-    cellSize:Number(cellSizeInput.value||8),
-    bwThreshold:Number(bwThresholdInput.value||128),
-    stitchStep:Number(stitchStepInput.value||4),
-    exportScale:Number(exportScaleInput.value||0.2)
+    cellSize:Number(document.getElementById('cellSize').value||8),
+    bwThreshold:Number(document.getElementById('bwThreshold').value||128),
+    stitchStep:Number(document.getElementById('stitchStep').value||4),
+    exportScale:Number(document.getElementById('exportScale').value||0.2)
   });
   reader.readAsDataURL(f);
+});
+
+worker.onmessage=ev=>{
+  if(ev.data.error){ log('خطأ: '+ev.data.error); return; }
+  merged = ev.data.merged;
+  log('تمت المعالجة — نقاط: '+ev.data.dstCoords.length);
+
+  // تفعيل زر إنشاء ملف DST
+  createBtn.disabled = false;
+
+  let svg=`<svg xmlns='http://www.w3.org/2000/svg' width='${ev.data.w}' height='${ev.data.h}' viewBox='0 0 ${ev.data.w} ${ev.data.h}'>`;
+  svg+=`<rect width='100%' height='100%' fill='white'></rect>`;
+  svg+=`<g stroke='black' stroke-width='1' stroke-linecap='round'>`;
+  svg+=`<polyline fill='none' points='${merged.map(p=>p[0]+','+p[1]).join(' ')}'/>`;
+  svg+=`</g></svg>`;
+  preview.innerHTML=`<object type="image/svg+xml" data="data:image/svg+xml;base64,${btoa(svg)}" style="width:100%;height:100%"></object>`;
+};
+
+// إنشاء ملف DST واستيراد التصميم
+createBtn.addEventListener('click',()=>{
+  if(!merged.length){ alert('لا يوجد تصميم لإنشاء الملف'); return; }
+  dstFile = buildDST(merged); // الملف يحتوي التصميم مباشرة
+  log('تم إنشاء ملف DST واستيراد التصميم داخله');
+  saveBtn.disabled = false; // تفعيل زر حفظ التصميم
+});
+
+// حفظ معلومات التصميم داخل الملف (فعليًا مجرد إعادة التأكيد هنا)
+saveBtn.addEventListener('click',()=>{
+  if(!dstFile){ alert('لا يوجد ملف لحفظه'); return; }
+  // هنا يمكن إضافة أي معالجة إضافية للبيانات قبل التنزيل
+  log('تم حفظ كل المعلومات داخل الملف');
+  downloadBtn.disabled = false; // تفعيل زر التنزيل
+});
+
+// تنزيل الملف النهائي
+downloadBtn.addEventListener('click',()=>{
+  if(!dstFile){ alert('لا يوجد ملف للتنزيل'); return; }
+  forceDownload(new Blob([dstFile],{type:'application/octet-stream'}),'molfa_output.dst');
+  log('تم تنزيل الملف النهائي');
 });
 </script>
 </body>
